Правки по второму ревью

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
@@ -124,11 +124,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума" class="logo logo_place_footer">
           <p class="footer__autor">&copy; Алекандра Куулар</p>
         </div>
-        <div class="footer__columns_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
             <nav>
               <ul class="footer__column-links">
@@ -138,7 +138,7 @@
               </ul>
             </nav>
         </div>
-        <div class="footer__columns_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
             <nav>
               <ul class="footer__column-links">
