--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Научиться учиться</title>
-        <link rel="stylesheet" href="./styles/normalize.css" />
-        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="stylesheet" href="./page/index.css" />
     </head>
     <body>
         <div class="page">
@@ -29,9 +28,67 @@
                                 дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
                             </p>
                             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим Эти же техники применяются на примере обучения в Практикуме.</p>
+                            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
                         </div>
                     </div>
+                </section>
+                <section class="techniques">
+                    <h2 class="section-title">Техники обучения</h2>
+                    <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+                    <ul class="cards">
+                        <li class="cards__item">
+                            <img src="./images/cards-attention.png" alt="Обложка книги 101 эссе, которые изменят ваше мышление" class="cards__image" />
+                            <h3 class="cards__title">Два вида внимания</h3>
+                            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+                        </li>
+                        <li class="cards__item">
+                            <img src="./images/cards-recall.png" alt="Скульптура думающего мальчика" class="cards__image" />
+                            <h3 class="cards__title">Recall</h3>
+                            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+                        </li>
+                        <li class="cards__item">
+                            <img src="./images/cards-interliving.png" alt="Транспортный узел Всемирного торгового центра в Нью-Йорке" class="cards__image" />
+                            <h3 class="cards__title">Интерливинг</h3>
+                            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+                        </li>
+                        <li class="cards__item">
+                            <img src="./images/cards-question.png" alt="Человек в большой пустой комнате" class="cards__image" />
+                            <h3 class="cards__title">Вопросы</h3>
+                            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+                        </li>
+                        <li class="cards__item">
+                            <img src="./images/cards-competence.png" alt="Стопка книг" class="cards__image" />
+                            <h3 class="cards__title">Иллюзия компетентности</h3>
+                            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+                        </li>
+                    </ul>
+                </section>
+                <section class="video">
+                    <h2 class="section-title">Видео на TED</h2>
+                    <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+                    <div class="video__iframes">
+                        <div class="video__iframe">
+                            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Здесь видео, которое вы не можете посмотреть, потому что ваш браузер не поддерживает iframe</iframe>
+                        </div>
+                        <div class="video__iframe">
+                            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Здесь видео, которое вы не можете посмотреть, потому что ваш браузер не поддерживает iframe</iframe>
+                        </div>
+                    </div>
+                </section>
+                <section class="oakley">
+                    <div class="two-columns">
+                        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+                        <div class="two-columns__main-text">
+                            <p class="two-columns__paragraph">
+                                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="feynman">
+                    <h2 class="feynman__title">Метод Фейнмана</h2>
+                    <p class="feynman__subtitle">Выучить и не забыть.</p>
+                    <a href="#" class="feynman__link"> Подробнее &rarr;</a>
                 </section>
                 <section class="digits">
                     <h2 class="section-title">Цифры и факты</h2>
@@ -73,10 +130,19 @@
                         </li>
                     </ul>
                 </section>
-                <section class="feynman">
-                    <h2 class="feynman__title">Метод Фейнмана</h2>
-                    <p class="feynman__subtitle">Выучить и не забыть.</p>
-                    <a href="#" class="feynman__link"> Подробнее &rarr;</a>
+                <section class="khan">
+                    <div class="khan__container">
+                        <h3 class="khan__autor">Салман Хан</h3>
+                        <h2 class="khan__title">Весь мир — школа</h2>
+                        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+                        </p>
+                        <h4 class="khan__quote-autor">Джордж Лукас</h4>
+                        <p class="khan__quote-autor-subline">Кинорежиссер, продюсер</p>
+                        <div class="khan__book-container">
+                            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги Салмана Хана Весь мир - школа"/>
+                            <a href="#" class="khan__buy-link"> Купить книгу &rarr;</a>
+                        </div>
+                    </div>
                 </section>
                 <section class="kaufman">
                     <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -124,6 +190,18 @@
                         </li>
                     </ul>
                     <div class="kaufman__triangle"></div>
+                </section>
+                <section class="resources">
+                    <h2 class="section-title">Полезные ресурсы</h2>
+                    <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+                    <nav>
+                        <ul class="resources__logo-zone">
+                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="Логотип Arzama"></a></li>
+                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo" alt="Логотип N+1"></a></li>
+                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="Логитип STRELKA"></a></li>
+                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo" alt="Логотип Полка"></a></li>
+                        </ul>
+                    </nav>
                 </section>
             </main>
             <footer class="footer">
