--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Научиться учиться</title>
-        <link rel="stylesheet" href="./page/index.css" />
+        <link rel="stylesheet" href="./pages/index.css" />
     </head>
     <body>
         <div class="page">
@@ -13,10 +13,10 @@
                 <h1 class="header__title">Научиться учиться</h1>
                 <p class="header__subtitle">
                     Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-                    <a href="#" class="header__link"> Узнать &rarr;</a>
+                    <a href="#" class="header__link" target="_blank"> Узнать &rarr;</a>
                 </p>
                 <img src="./images/header-image.png" alt="Картина Федора Решетникова Опять двойка" class="header__main-illustration" />
-                <div class="header__square-pic"></div>
+                <div class="header__square-pic rotation"></div>
             </header>
             <main class="content">
                 <section class="description">
@@ -67,12 +67,8 @@
                     <h2 class="section-title">Видео на TED</h2>
                     <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
                     <div class="video__iframes">
-                        <div class="video__iframe">
-                            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="video__iframe">
-                            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </section>
                 <section class="oakley">
@@ -132,11 +128,11 @@
                 </section>
                 <section class="khan">
                     <div class="khan__container">
-                        <h3 class="khan__autor">Салман Хан</h3>
+                        <p class="khan__autor">Салман Хан</p>
                         <h2 class="khan__title">Весь мир — школа</h2>
-                        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-                        </p>
-                        <h4 class="khan__quote-autor">Джордж Лукас</h4>
+                        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+                        </blockquote>
+                        <p class="khan__quote-autor">Джордж Лукас</p>
                         <p class="khan__quote-autor-subline">Кинорежиссер, продюсер</p>
                         <div class="khan__book-container">
                             <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги Салмана Хана Весь мир - школа"/>
@@ -189,19 +185,17 @@
                             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
                         </li>
                     </ul>
-                    <div class="kaufman__triangle"></div>
+                    <div class="kaufman__triangle rotation"></div>
                 </section>
                 <section class="resources">
                     <h2 class="section-title">Полезные ресурсы</h2>
                     <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-                    <nav>
-                        <ul class="resources__logo-zone">
-                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="Логотип Arzama"></a></li>
-                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo" alt="Логотип N+1"></a></li>
-                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="Логитип STRELKA"></a></li>
-                            <li><a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo" alt="Логотип Полка"></a></li>
-                        </ul>
-                    </nav>
+                    <ul class="resources__logo-zone">
+                        <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="Логотип Arzama"></a></li>
+                        <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo" alt="Логотип N+1"></a></li>
+                        <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="Логитип STRELKA"></a></li>
+                        <li><a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo" alt="Логотип Полка"></a></li>
+                    </ul>
                 </section>
             </main>
             <footer class="footer">
